--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
         <p>Yazid — 2024</p>
         <div class="flex space-x-2 font-semibold">
             <a href="#" class="hover:text-gray-900">Artstation</a>
-            <a href="#" class="hover:text-gray-900">LinkedIn</a>
+            <a href="https://www.linkedin.com/in/yazid-lawliet-a5a543292/" class="hover:text-gray-900">LinkedIn</a>
             <a href="#" class="hover:text-gray-900">Twitter</a>
         </div>
     </div>
